// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commander action exits with status 1 when task throws error asynchronously 1`] = `
Array [
  Array [
    "Task \\"mockTask\\" failed:

Error: async error thrown
  ...stack trace...
",
  ],
]
`;

exports[`commander action exits with status 1 when task throws synchronously 1`] = `
Array [
  Array [
    "Task \\"mockTask\\" failed:

Error: sync error thrown
  ...stack trace...
",
  ],
]
`;

exports[`commander action passes args to getOptions, calls run() with taskName and options 1`] = `
Array [
  Array [
    "taskName",
    Object {
      "args": Array [
        "f",
        "a",
        "b",
        "c",
        "d",
        "e",
      ],
    },
  ],
]
`;
